--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
         run: python feed.py
       - name: Push Repo
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name joshulus
+          git config user.email joshulus@github.com
           git add .
           git commit -m "Modified Feed"
           git push
